# MatchSync

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0000_0001_initial_schema.py  20260201_0000_0002_fixture_ingestion.py  20260301_0000_0003_user_preferences.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  auth.py  logging.py  request_id.py
backend/app/api/v1/: __init__.py  deps.py  router.py
backend/app/application/: __init__.py
backend/app/application/services/: __init__.py  account_service.py  auth_service.py  calendar_permissions.py  calendar_service.py  calendar_validator.py  dashboard_service.py  fixture_ingestion_service.py  fixture_query_service.py  job_service.py  metadata_service.py  onboarding_service.py  orchestration_service.py  session_service.py  sports_service.py  subscription_service.py  sync_executor.py  sync_service.py  user_service.py  worker_service.py
backend/app/core/: __init__.py  config.py  cookies.py  logging.py  security.py
backend/app/domain/: __init__.py  hashing.py
backend/app/domain/calendar/: __init__.py  duplicates.py  metadata.py
backend/app/domain/entities/: __init__.py
backend/app/domain/fixtures/: __init__.py  deduplication.py  identity.py  report.py  validation.py  versioning.py
backend/app/domain/orchestration/: __init__.py  models.py  retry.py
backend/app/domain/ports/: __init__.py  calendar_provider.py  identity_provider.py  sports_provider.py
backend/app/domain/sports/: __init__.py  codec.py  normalization.py
backend/app/domain/sync/: __init__.py  diff.py  models.py  planner.py  rendering.py
backend/app/domain/value_objects/: __init__.py  enums.py  time_window.py
backend/app/exceptions/: __init__.py  base.py  calendar.py  handlers.py  provider.py  sports.py
backend/app/infrastructure/: __init__.py  cache.py  heartbeat.py  jobs.py  locks.py  redis.py
backend/app/infrastructure/calendar/: __init__.py  factory.py
backend/app/infrastructure/crypto/: __init__.py  encryption.py
backend/app/infrastructure/google/: __init__.py  batch.py  calendar_client.py  endpoints.py  errors.py  oauth_client.py  token_manager.py
backend/app/persistence/: __init__.py  session.py
backend/app/schemas/: __init__.py  application.py  auth.py  calendar.py  fixtures.py  health.py  internal.py  jobs.py  sports.py  sync.py
backend/app/tasks/: __init__.py  base.py  container.py  handlers.py  maintenance_tasks.py  sync_tasks.py
backend/app/utils/: __init__.py  correlation.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_application_api.py  test_auth_flow.py  test_calendar_api.py  test_calendar_service.py  test_calendar_token_manager.py  test_fixture_api.py  test_fixture_ingestion.py  test_google_calendar_client.py  test_models.py  test_orchestration_api.py  test_orchestration_locks.py  test_orchestration_worker.py  test_repositories.py  test_sports_api.py  test_sports_providers.py  test_sports_service.py  test_sync_api.py  test_sync_engine.py
backend/tests/unit/: test_auth_units.py  test_calendar_domain.py  test_config.py  test_fixture_domain.py  test_google_batch.py  test_health.py  test_orchestration_domain.py  test_sports_normalization.py  test_sports_registry_cache.py  test_sync_domain.py
docker/: README.md
(+136 files in other folders)
