[project]
name = "matchsync-backend"
version = "0.1.0"
description = "MatchSync backend — syncs sports fixtures into Google Calendar"
readme = "README.md"
requires-python = ">=3.13"

# Runtime dependencies. Kept intentionally minimal for the foundation stage —
# only what is needed to boot the app, connect to Postgres/Redis, log, and
# schedule background work. Business-logic libraries arrive in later stages.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",   # core + EmailStr validation (internal schemas)
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "greenlet>=3.1.0",          # required by SQLAlchemy's async engine
    "asyncpg>=0.30.0",          # async Postgres driver used by the app
    "psycopg[binary]>=3.2.0",   # sync driver used by Alembic migrations
    "alembic>=1.13.0",
    "celery[redis]>=5.4.0",     # Stage 1 chose Celery + Beat + Redis
    "redis>=5.1.0",             # also backs auth sessions + OAuth state (Stage 4)
    "structlog>=24.4.0",        # structured, JSON-capable logging
    "httpx>=0.27.0",            # shared resilient HTTP client (future providers)
    "pyjwt>=2.9.0",             # access-token signing/verification (Stage 4)
    "cryptography>=43.0.0",     # Fernet encryption for stored OAuth tokens
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    # Celery ships no py.typed marker; these stubs type the app/task decorators.
    # (types-redis was removed: it targets redis 4.x and would shadow the inline
    # annotations redis>=5 ships itself.)
    "celery-types>=0.26.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",            # ASGI test client transport
    "aiosqlite>=0.20.0",        # in-memory async DB for the persistence tests
    "fakeredis>=2.26.0",        # in-memory Redis for auth/session tests
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Tooling configuration — colocated so the repo has a single source of truth.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
# Ruff subsumes isort (rule set "I"), flake8, pyupgrade, and more. We keep it
# as the single linter/import-sorter and let Black own pure formatting.
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = [
    "E501",  # line length is enforced by Black, not the linter
    # PEP 695 syntax (class Repo[T], `type X = ...`) parses only on Python
    # >= 3.12; the local dev/test toolchain still runs 3.11. Adopt when the
    # toolchain is uniformly on 3.13, then remove these three ignores.
    "UP040",
    "UP046",
    "UP047",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["app"]
